<resources>
    <string name="app_name">Team Up</string>
    <string name="login_info">Log in to your account</string>
    <string name="sign_up">Sign up with Facebook</string>
    <string name="fb_info">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="donothave">Don\'t have an account?Sign up</string>
    <string name="recreational">The social app\nfor your recreational life.</string>
    <string name="create_account">Create your account</string>
    <string name="existing">Log in to an existing account</string>
    <string name="agreement">T&amp;C and Privacy policy</string>
    <string name="signupemail">Sign up with email</string>
    <string name="teamup">TeamUp</string>
    <string name="content_data">We sent you a code\nto verify your mobile number</string>
    <string name="tutorial_2">Find and join local teams around you or\n "TeamUP" with other individuals</string>
    <string name="tutorial_3">Event organiser,\nTeam Talk, and attendance record,\nto make managing a team easier</string>
    <string name="tutorial_4">Search local events for you and your\n team(s) to participate in</string>
    <string name="tutorial_5">No need for cash.\nTeamPay allows you to easily transfer\nmoney electronically to the team admin.</string>
    <string name="get_started">Get Started</string>
    <string name="belocal">Be a local</string>
    <string name="mgmt">Team Management</string>
    <string name="near">Find events near you</string>
    <string name="teampay">Sign up with email</string>
    <string name="teampayy">TeamPay</string>
    <string name="otp_text">We\'ll text you a confirmation code to\nsecure your account</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_btn">Continue</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="conti">Continue</string>
    <string name="visit">Visit Website</string>
    <string name="forgot_content">Please enter your email address. You will\nreceive a link to create a new password</string>
    <string name="dob">Date of birth</string>
    <string name="facebook">Facebook</string>
    <string name="desFb">Invite friends from Facebook</string>
    <string name="insta">Instagram</string>
    <string name="desIn">Invite friends from Instagram</string>
    <string name="emailOnly">Email</string>
    <string name="desEmail">Invite friends via email</string>
    <string name="contact">Contacts</string>
    <string name="invite">Invite friends via text</string>
    <string name="inviteOnly">Invite later</string>
    <string name="no_data_available">No Data Available</string>
    <string-array name="array_name">
        <item>Hello</item>
        <item>Testing</item>
        <item>Data not found</item>
    </string-array>
    <string name="validationErrors">Validation Errors</string>
    <string name="endingIn">Card ending in </string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="addPayment">Add Payment Method</string>
    <string name="nearest_restaurant">Find Nearest Restaurant</string>
    <string name="city">Street Address,City,State</string>
    <string name="house_number">House Number</string>
    <string name="da_mickey">DA MICKEY</string>
    <string name="loginwithemail">Login to your account</string>
    <string name="how">How it works</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="create">Create Account</string>
    <string name="forgt">Forgot</string>
    <string name="forgt_pwd">Forgot Password</string>
    <string name="API_KEY">AIzaSyBTiersANpUUVx1_JA13gSK8ZxjD6UfXi4</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="exit_text">Are you sure you want to exit ?</string>
    <string name="text_login">Login &amp; SignUp</string>
    <string name="start_ordering">To start ordering</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up!</string>
    <string name="reg">Crea un account</string>
    <string name="forgot">Forgot Password?</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="action_search">Search</string>
    <string name="profile">PROFILE</string>
    <string name="manage_profile">Manage your profile,address book &amp; more,Manage your profile,Manage Manage your profile,Manage Manage your profile,Manage </string>
    <string name="manage_profile_land">Manage your profile,address book,credit card &amp; more</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAdress">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="save">Save</string>
    <string name="browse">Browse</string>
    <string name="upp">Update your profile picture.</string>
    <string name="connected">Connected as</string>
    <string name="fiume">FIUME CAFFE</string>
    <string name="hamburger">Hamburger, Pizza</string>
    <string name="distance">Distance: not available\nDelivery Est: not available\nDelivery Distance</string>
    <string name="AddNew">Add New</string>
    <string name="address">Address</string>
    <string name="locationName">Location Name</string>
    <string name="defa">Default</string>
    <string name="defaut">Set as default</string>
    <string name="recent_order">Your Recent Order</string>
    <string name="lang">Language</string>
    <string name="en_US">United States | English</string>
    <string name="it_IT">Italy | Italiano</string>
    <string name="sp_SP">Spain | Spanish</string>
    <string name="port">Portugal | Portugese</string>
    <string name="ch_Ch">China | China</string>
    <string name="change">CHANGE</string>
    <string name="fav">Favorite</string>
    <string name="recent">Recent Orders</string>
    <string name="home">Home</string>
    <string name="browse_res">Browse</string>
    <string name="order_his">Order History</string>
    <string name="my_fav">My Favorites</string>
    <string name="add_book">Address Book</string>
    <string name="signout">Sign Out</string>
    <string name="live_chat">Live Chat</string>
    <string name="change_lang">Language</string>
    <string name="agreeterms">I agree the above terms.</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="placeon">Placed on :</string>
    <string name="total">Total     </string>
    <string name="payment">Payment   :</string>
    <string name="delivered">DELIVERED</string>
    <string name="order">Pizzeria Santa\nMaria</string>
    <string name="order_land">Pizzeria Santa Maria</string>
    <string name="tutorial">Tutorial</string>
    <string name="register">Register</string>
    <string name="network">Check Network Connection</string>
    <string name="login_small">Login</string>
    <string name="reviews">Reviews</string>
    <string name="preorder">Pre-Order</string>
    <string name="minimum">Minimum 9$</string>
    <string name="pizza">Pizza</string>
    <string name="menu_cheese">Menu Cheese Burger</string>
    <string name="dish_price">$ 7.90</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="clock_hours">10.30-20:00</string>
    <string name="monday">Monday</string>
    <string name="review">Write A Review</string>
    <string name="addImage">ADD IMAGE</string>
    <string name="publishReview">Publish Review</string>
    <string name="getdirection">GET DIRECTIONS</string>
    <string name="service">Services</string>
    <string name="paymethod">Payment Method</string>
    <string name="cod">Cash On Delivery</string>
    <string name="yes">Yes</string>
    <string name="paypal">Paypal</string>
    <string name="card">Card:</string>
    <string name="acceptTickets">Accept Tickets(buoni pasto)</string>
    <string name="offers">Offers</string>
    <string name="dummy">20% can be the main thing</string>
    <string name="sortby">SORT BY</string>
    <string name="populardishes">Popular Dishes</string>
    <string name="pop">Popular</string>
    <string name="mamamghretta">Mamma Margherita</string>
    <string name="pop_dishes"><![CDATA[Popular Cuisines & Dishes]]></string>
    <string name="popular_areas">Popular Areas</string>
    <string name="pop_res">Popular Restaurants</string>
    <string name="connectwith">Or Connect With</string>
    <string name="whatcn">What can\nwe serve you\ntoday?</string>
    <string name="triangle">20%</string>
    <string name="money">$ 7.00</string>
    <string name="discnt">Discount</string>
    <string name="submit">Submit</string>
    <string name="discount"> Discount for credit card/paypal payment only</string>
    <string name="sub_total_dummy"> Subtotal must exceed $5.00</string>
    <string name="ordini">ordini da 20$ hanno\n1bibita 1.5L omaggio </string>
    <string name="gift">Gift: Cocacola 1.5L</string>
    <string name="menu_pranzo">Menu Pranzo(Pizz+Bibita=5$)</string>
    <string name="riapre">Riapre 11:00</string>
    <string name="consegna">Consegna: Consegna gratis</string>
    <string name="ordine">Ordine Minimo: $20.00</string>
    <string name="only_order">ORDER</string>
    <string name="select_zone">Select Zone</string>
    <string name="pizzeria">PIZZERIA BABBO NATALE</string>
    <string name="rating_detail">(3)</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Text ever since the 1500s\nLorem Ipsum has been industry standards.More</string>
    <string name="text_dish">Pomodoro,mozrella,wurstel,\npatatine</string>
    <string name="normal">Normal/Maxi</string>
    <string name="americana">2.AMERICANA(Normale)</string>
    <string name="one">1</string>
    <string name="indonesia">Abitegrasso, Indonesia</string>
    <string name="fastest">Find Near By Restaurants</string>
    <string name="currentloc">Current Location</string>
    <string name="setdestinantion">Set Destination</string>
    <string name="may">MAY</string>
    <string name="date_number">9</string>
    <string name="no_events">No Events</string>
    <string name="today">Today</string>
    <string name="soccer">Soccer</string>
    <string name="earl">Earl Padilla</string>
    <string name="any_age">Any Age</string>
    <string name="detail_player">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam nunc, porta id ex vehicula, euismod laoreet diam. Curabitur rhoncus et sapien a efficitur. Maecenas accumsan ipsum non risus volutpat, nec consequat ex gravida. Donec condimentum varius aliquam. Proin ac dolor et tellus tempus faucibus. Maecenas ornare suscipit orci in sodales. Ut posuere eget justo sed tempus.</string>
    <string name="fabian">Fabianmouth</string>
    <string name="location">Location</string>
    <string name="need_player">Players Needed</string>
    <string name="loc_name">Fabianmouth Local Stadium</string>
    <string name="add_to_favorites">Add to Favourites</string>
    <string name="send_msg">Send message</string>
    <string name="cancel">Cancel</string>
    <string name="editeam">Edit Team</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_new">Add New Event</string>
    <string name="add_new_event">Add New Member</string>
    <string name="sync">Sync events to Calendar</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove_nmber">Remove member</string>
    <string name="mixed">Mixed team</string>
    <string name="teamnotification">Team Notification</string>
</resources>