<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/notification"
        android:title="Notification"
        android:icon="@drawable/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/editTeam"
        android:title="@string/editeam"
        app:showAsAction="never" />

    <item android:id="@+id/editEvent"
        android:title="@string/edit_event"
        app:showAsAction="never"/>

    <item
        android:id="@+id/addNewEvent"
        android:title="@string/add_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/addNewMember"
        android:title="@string/add_new_event"
        app:showAsAction="never" />

    <item
        android:visible="false"
        android:id="@+id/teamNotification"
        android:title="@string/teamnotification"
        app:showAsAction="never" />


    <item
        android:id="@+id/syncCalendar"
        android:title="@string/sync"
        app:showAsAction="never" />


</menu>