<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/text_size_smallest_ever"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:background="@drawable/shape_white_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/edit_team"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest_ever"
            android:text="@string/editeam"
            android:textColor="@color/blue" />

        <View
            android:background="@color/slider_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <TextView
            android:id="@+id/edit_event"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest_ever"

            android:text="@string/edit_event"
            android:textColor="@color/blue" />
        <View

            android:background="@color/slider_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <TextView
            android:id="@+id/add_new_event"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest_ever"

            android:text="@string/add_new"
            android:textColor="@color/blue" />

        <View
            android:background="@color/slider_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <TextView
            android:id="@+id/add_new_member"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest_ever"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/add_new_event"
            android:textColor="@color/blue" />

        <View
            android:background="@color/slider_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <TextView
            android:id="@+id/sync_calendar"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest_ever"
            android:text="@string/sync"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel_pop"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_smallest_ever"
        android:background="@drawable/shape_white_rounded"
        android:clickable="true"
        android:text="@string/cancel"
        android:textColor="@color/blue" />

</LinearLayout>