<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:weightSum="1"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight=".11"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/monthName"
                android:layout_width="32dp"
                android:layout_height="14dp"
                android:layout_marginTop="15dp"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/may"
                android:textColor="@color/white"
                android:textSize="@dimen/particle" />

            <TextView
                android:id="@+id/calendar_date"
                android:layout_width="32dp"
                android:layout_height="23dp"
                android:layout_below="@+id/monthName"
                android:background="#f9f9f9"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/date_number"
                android:textColor="@color/black"
                android:textSize="@dimen/too_small" />

        </LinearLayout>


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/icon_light_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:src="@mipmap/icon_light_blue" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="200dp"
                android:layout_height="21dp"
                android:layout_gravity="start"
                android:text="@string/no_events"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_smallest_ever" />

            <TextView
                android:id="@+id/eventDay"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="start"
                android:text="@string/today"
                android:textColor="@color/text_write"
                android:textSize="@dimen/too_small" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>